Se agregan componentes busqueda por pais y filtro por region

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-slate-50 text-black dark:bg-slate-700 dark:text-white">
+<header class="bg-white text-black dark:bg-slate-700 dark:text-white">
   <div
     class="container m-auto flex flex-row flex-wrap justify-between items-center p-5"
   >
