--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div #darkMode class="dark">
   <app-header></app-header>
-  <main class="container m-auto p-5 mt-5 bg-black text-white">Content</main>
+  <div class="container m-auto p-5 mt-2">
+    <router-outlet></router-outlet>
+  </div>
 </div>
