Se integra servicio para el listado de todos los paises en Home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div #darkMode class="dark">
-  <app-header></app-header>
-  <div class="container m-auto p-5 mt-2">
-    <router-outlet></router-outlet>
-  </div>
+<app-header class="fixed w-full top-0 z-10" ></app-header>
+<div class="container m-auto p-5">
+  <router-outlet></router-outlet>
 </div>
