--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div
     class="container m-auto flex flex-row flex-wrap justify-between items-center p-5"
   >
-    <h1 class="text-lg font-semibold">Where in the world?</h1>
+    <h1 class="text-xl font-extrabold">Where in the world?</h1>
     <div>
       <span *ngIf="isDarkMode" class="cursor-pointer" (click)="darkMode(false)"
         ><i class="fa-solid fa-moon"></i
