Se integran servicios para los filtros de busqueda

--- a/src/app/countrie/components/filter/filter.component.html
+++ b/src/app/countrie/components/filter/filter.component.html
@@ -1,5 +1,6 @@
 <select
   class="p-3 w-3/4 bg-white text-black dark:bg-slate-700 dark:text-slate-50 md:w-96 mt-5 rounded md:mt-0"
+  [formControl]="inputFilter"
 >
   <option value="">Filter by Region</option>
   <option *ngFor="let region of regions" [value]="region.key">
