--- a/src/app/countrie/home-countrie/home-countrie.component.html
+++ b/src/app/countrie/home-countrie/home-countrie.component.html
@@ -3,7 +3,12 @@
 >
   <app-input-search></app-input-search>
   <app-filter></app-filter>
-  <ng-template #content>
+
+  <ng-container
+    *ngTemplateOutlet="countries.length > 0 ? results : empty"
+  ></ng-container>
+
+  <ng-template #results>
     <div
       class="w-full flex flex-col justify-center items-center sm:flex-row sm:flex-wrap"
     >
@@ -13,13 +18,12 @@
       ></app-card-country>
     </div>
   </ng-template>
-  <ng-template #notContent>
+
+  <ng-template #empty>
     <app-empty-result class="w-full mt-10"></app-empty-result>
   </ng-template>
-  <ng-container
-    *ngTemplateOutlet="countries.length > 0 ? content : notContent"
-  ></ng-container>
 </div>
+
 <ngx-loading
   [show]="loading"
   [config]="{ backdropBorderRadius: '3px' }"
