--- a/src/app/countrie/components/card-country/card-country.component.html
+++ b/src/app/countrie/components/card-country/card-country.component.html
@@ -1,5 +1,6 @@
 <div
   class="card w-64 bg-white text-black dark:bg-slate-700 dark:text-slate-50 mt-10 sm:mr-10 cursor-pointer shadow-lg"
+  (click)="viewCountry(country.name.common)"
 >
   <img [src]="country.flags.png" alt="Image country" />
   <div class="p-5">
