--- a/src/app/countrie/components/empty-result/empty-result.component.html
+++ b/src/app/countrie/components/empty-result/empty-result.component.html
@@ -1,3 +1,3 @@
-<div class="p-4 mb-4 text-sm text-blue-700 bg-blue-100 rounded-lg dark:bg-blue-200 dark:text-blue-800 text-center" role="alert">
+<div class="mt-10 p-4 mb-4 text-sm text-blue-700 bg-blue-100 rounded-lg dark:bg-blue-200 dark:text-blue-800 text-center" role="alert">
   <span class="font-extrabold text-base">Empty results...</span>
 </div>
